// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`README 1`] = `
Object {
  "hashmap": Object {
    "8/BTHeP7pAu6GkjAwe3rTcVuzz0=": "constantname",
    "EflXjQXm97tYo83QAQfp9OOIJnE=": "error_lowercase",
    "Ny6gjKsz5xwCxlHbyDpHTTLGduo=": "text_lowercase",
    "QXwuSw4lbgtM+LaLx8qIgozrTfQ=": "este-texto-tambem-mas-sem-as-exclamacoes",
    "QthXYQhW8rC4q6OZfKtjm3psLQA=": "ignore-this-text",
    "R+7cRQjHltgb5zEMPL72ar9NhJM=": "nome-do-usuario",
    "Rmwka0DwTyANlKdY+KmY+2+nsh8=": "incluir-este-texto",
    "ZMZTdNurb+N2J0gZbZ06lhDi5ak=": "label_lowercase",
    "a4EMkKqamYWCMMPV7UeQlqGQ+ks=": "react_lowercase",
    "aCHIG16g15f1w5peipW8B0Ckmto=": "my-ignored-classname_lowercase",
    "e3O0FHnka5/t4mC69D08PIWAoeE=": "erro-de-entrada",
    "orP5FWfND2ag0kKwjlLNVUaDcwI=": "meu-texto-internacionalizavel",
  },
  "ignored": Object {
    "constantname": "constantName",
    "error_lowercase": "error",
    "ignore-this-text": "Ignore this text",
    "label_lowercase": "label",
    "my-ignored-classname_lowercase": "my-ignored-classname",
    "react_lowercase": "react",
    "text_lowercase": "text",
  },
  "strings": Object {
    "erro-de-entrada": "Erro de entrada",
    "este-texto-tambem-mas-sem-as-exclamacoes": "Este texto também, mas sem as exclamações",
    "incluir-este-texto": "Incluir este texto",
    "meu-texto-internacionalizavel": "Meu texto internacionalizável",
    "nome-do-usuario": "Nome do usuário",
  },
}
`;

exports[`test 1 1`] = `
Object {
  "hashmap": Object {
    "bRc43KdTg0eYkvRTPRtMSeLbRE8=": "este-texto-precisa-ser-extraido",
  },
  "ignored": Object {
    "este-texto-precisa-ser-extraido": "Este texto precisa ser extraído",
  },
  "strings": Object {},
}
`;

exports[`test com jsx 1`] = `
Object {
  "hashmap": Object {
    "/2V0gP849V1eKW/IftUR/o2oWtc=": "mb-2-ignorethis_lowercase",
    "EBWrVdq4vJtFkVHDgqixjiQ95ug=": "nao-reembolsavel",
    "QdJ5EPNRQcnBlEDFnSKgOb2v18s=": "http-www-ignorar-esta-url-com-br_lowercase",
    "WQ5JOinjNxjs7rvyJmB/DK4PhRk=": "este-e-um-label-e-precisa-ser-extraido",
    "a4EMkKqamYWCMMPV7UeQlqGQ+ks=": "react_lowercase",
    "bRc43KdTg0eYkvRTPRtMSeLbRE8=": "este-texto-precisa-ser-extraido",
    "d95o2uzYI7q7tY7bHI4U1xBug7s=": "3_lowercase",
    "vp5B8E4KI553YPQ+kHD7SVLwbHg=": "ignorethisword",
  },
  "ignored": Object {
    "3_lowercase": "3",
    "http-www-ignorar-esta-url-com-br_lowercase": "http://www.ignorar.esta.url.com.br",
    "ignorethisword": "IgnoreThisWord",
    "mb-2-ignorethis_lowercase": "mb-2 ignorethis",
    "react_lowercase": "react",
  },
  "strings": Object {
    "este-e-um-label-e-precisa-ser-extraido": "Este é um label e precisa ser extraído",
    "este-texto-precisa-ser-extraido": "Este texto precisa ser extraído",
    "nao-reembolsavel": "Não reembolsável",
  },
}
`;

exports[`test com jsx 2 1`] = `
Object {
  "hashmap": Object {
    "a4EMkKqamYWCMMPV7UeQlqGQ+ks=": "react_lowercase",
    "d95o2uzYI7q7tY7bHI4U1xBug7s=": "3_lowercase",
    "h4NyoTJq8/o2WlCpweZhbJZIfDI=": "mb-2-ignorethis-second-time_lowercase",
  },
  "ignored": Object {
    "3_lowercase": "3",
    "mb-2-ignorethis-second-time_lowercase": "mb-2 ignorethis second-time",
    "react_lowercase": "react",
  },
  "strings": Object {},
}
`;

exports[`teste ignorar jquery 1`] = `
Object {
  "hashmap": Object {
    "TUHsOdVilEfkpAUkKnCEd4EkNzE=": "selectorjquery_lowercase",
    "byq5Y7WlHRVdaawJHlLlBtEFUFc=": "jquery_lowercase",
  },
  "ignored": Object {
    "jquery_lowercase": "jquery",
    "selectorjquery_lowercase": "selectorjquery",
  },
  "strings": Object {},
}
`;

exports[`teste template 2 1`] = `
Object {
  "hashmap": Object {},
  "ignored": Object {},
  "strings": Object {},
}
`;

exports[`teste template com jsx 1`] = `
Object {
  "hashmap": Object {
    "UBvigzwxfajG62eIHZTfMgWcAQI=": "ignorethis_lowercase",
  },
  "ignored": Object {
    "ignorethis_lowercase": "ignorethis",
  },
  "strings": Object {},
}
`;
